Fixed the really wide and off center navbar and the content container now has its content centered.
Still working on figuring out why the navbar appears to re-render whenever i change views.

--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,4 +1,6 @@
 .contents {
   display: flex;
   justify-content: space-between;
+  padding-right: 2rem;
+  padding-left: 2rem;
 }
